# ImEngine

./: .clang-format  .clangd  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  LICENSE  QUICKSTART.md  README.md  test-build.ps1
.github/: copilot-instructions.md
ImEngine/: main.cpp
ImEngine/Core/: CMakeLists.txt
ImEngine/Core/include/: Default.h  Task.h  VulkanContext.h
ImEngine/Core/include/Concurrency/FibersSystem/: Fiber.h
ImEngine/Core/include/Core/Debug/: Logger.h
ImEngine/Core/include/Core/Maths/: Concepts.h  Constants.h  Units.h
ImEngine/Core/include/Core/Maths/Objects/: Matrice.h  Quaternion.h  Vector.h
ImEngine/Core/include/Debug/: Logger.h
ImEngine/Core/include/Logger/: Logger.h
ImEngine/Core/include/Maths/: Concepts.h  Constants.h
ImEngine/Core/include/Maths/Misc/: Concepts.h  Constants.h  Units.h
ImEngine/Core/include/Maths/Objects/: Matrice.h  Quaternion.h  Vector.h
ImEngine/Core/include/Memory/MemoryAllocator/: MemoryAllocatorBase.h
ImEngine/Core/include/Memory/MemoryAllocator/Allocators/: LinearAllocator.h  MallocAllocator.h  PoolAllocator.h
ImEngine/Core/misc/: CoreExport.h  ImEngine-Core.pch.h
ImEngine/Core/modules/: Core.cppm
ImEngine/Core/modules/IO/: IO.cppm
ImEngine/Core/modules/IO/Logging/: Format.cppm  Logger.cppm
ImEngine/Core/modules/IO/Logging/Sinks/: Sink.cppm
ImEngine/Core/modules/Thread/: Job.cppm  Thread.cppm  Worker.cppm
ImEngine/Core/pch/: pch.h
ImEngine/Core/src/: Core.cpp  Default.cpp  VulkanContext.cpp
ImEngine/Core/src/Concurrency/FibersSystem/: Fiber.cpp
ImEngine/Core/src/Logger/: Logger.cpp
ImEngine/Editor/: CMakeLists.txt  RuntimeEditor.hpp
ImEngine/Editor/include/: ImEngineEditor.h  ImEngine_Editor.h  Temp.h  VulkanContextEditor.h
ImEngine/Editor/misc/: EditorExport.h  ImEngine-Editor.pch.h  pch.hpp
ImEngine/Editor/pch/: pch.h
ImEngine/Editor/src/: ImEngine-Editor.cpp  ImEngineEditor.cpp  ImEngine_Editor.cpp  Temp.cpp  VulkanContextEditor.cpp  main.cpp
ImEngine/Engine/: CMakeLists.txt
ImEngine/Engine/include/: Engine.h  RuntimeEngine.hpp  Task.h
ImEngine/Engine/include/Concurrency/FibersSystem/: Fiber.h
ImEngine/Engine/include/Engine/: Engine.h
ImEngine/Engine/include/Engine/Rendering/: RHI.h
ImEngine/Engine/include/Engine/Rendering/Contexts/: VulkanContext.h
ImEngine/Engine/include/Engine/Window/: Window.h
ImEngine/Engine/include/Engine/Window/Contexts/: GLFWWindow.h
ImEngine/Engine/include/Memory/MemoryAllocator/: MemoryAllocatorBase.h
ImEngine/Engine/include/Memory/MemoryAllocator/Allocators/: LinearAllocator.h  MallocAllocator.h  PoolAllocator.h
ImEngine/Engine/include/MemoryAllocator/: MemoryAllocatorBase.h
ImEngine/Engine/include/MemoryAllocator/Allocators/: LinearAllocator.h  MallocAllocator.h  PoolAllocator.h
ImEngine/Engine/include/Window/: Window.h
ImEngine/Engine/misc/: EngineExport.h  ImEngine-Engine.pch.h
ImEngine/Engine/pch/: ImEngineLibrary.h  pch.h
ImEngine/Engine/shaders/: CMakeLists.txt
ImEngine/Engine/src/: Engine.cpp  ImEngine_Engine.cpp  Task.cpp
ImEngine/Engine/src/Concurrency/FibersSystem/: Fiber.cpp
ImEngine/Engine/src/MemoryAllocator/: MemoryAllocatorBase.cpp
ImEngine/Engine/src/Rendering/: RHI.cpp
ImEngine/Engine/src/Rendering/Contexts/: VulkanContext.cpp
ImEngine/Engine/src/Window/: Window.cpp
ImEngine/Engine/src/Window/Contexts/: GLFWWindow.cpp
ImEngine/Runtime/: CMakeLists.txt
ImEngine/Runtime/src/: main.cpp
ImEngine/Sandbox/: CMakeLists.txt
ImEngine/Sandbox/src/: ImEngine-Sandbox.cpp  ImEngine_Sandbox.cpp  main.cpp
ImEngine/include/Engine/: Task.h
cmake/: Cache.cmake  CompilerWarnings.cmake  PatchVulkanLoader.cmake  Security.cmake  StandardSettings.cmake
docs/: ARCHITECTURE.md  BUILD_VALIDATION.md  CODING_STYLE.md  VULKAN_MASM_FIX.md
